Version 2.90.5 (November 11, 2024)
  - Fixed a bug related with 'inkey$'.


Version 2.90.4 (September 17, 2023)
  - Fixed a bug related with 'print using' under windows.
    Thanx to Paul Shutler for reporting this !


Version 2.90.3 (February 26, 2023)
  - Introductory sections about subroutines and libraries
  - Updated the docu from docbook 4.5 to 5


Version 2.90.2 (January 6, 2022)
  - Fixed precision error for print using under windows
  - Better error-reporting for an edge case of short-if
  - Allow '==' to check for equality and '!=' for inequality ('=' and '<>' still work)


Version 2.90.1 (July 11, 2021)
  - Repaired the docu (especially yabasic.htm)
  - Removed references to the old documentation (still available on github)


Version 2.90.0 (July 10, 2021)
  - Fixed an error with local variables
  - Moved to a new building-environment (see github and there README.org for details)


Version 2.89.1 (January 30, 2021)
  - Fixes for documentation


Version 2.89.0 (December 29, 2020)
  - Fixed for Problem with system-command after clear screen on MacOS
  - Added functions eval and eval$


Version 2.87.1 (November 07, 2020)
  - Fixed for libffi on 32 bit systems
  - Updated included header files (windows) of ffi from libffi 3.3


Version 2.87.0 (August 12, 2020)
  - Fixed an edge-case in for-loops
  - Allow eof(0) and peek(0) to refer to standard input


Version 2.86.9 (June 6, 2020)
  - Fix formatting of larger numbers with '####' et.al.


Version 2.86.8 (May 9, 2020)
  - Bringing pkg.m4 with us to ease build process


Version 2.86.7 (April 4, 2020)
  - Using pkg-config (if available) to locate libffi


Version 2.86.6 (March 8, 2020)
  - Advancing version for technical reasons


Version 2.86.5 (March 8, 2020)
  - Fix double backslash in string before quote


Version 2.86.4 (January 1, 2020)
  - Fix for do-loop / continue


Version 2.86.3 (December 15, 2019)
  - Fix for heap overflow found with honggfuzz


Version 2.86.2 (December 12, 2019)