@@ -21,20 +21,17 @@
   <b>Answer:</b> Yes. People have successfully installed the Windows-Version of yabasic under
   wine. Note however, that there is also a native linux-Version of yabasic.
 </p>
-<p><b>Question: </b>Can yabasic generate stand-alone programs, which may run 
-without the yabasic executable ?<br> <b>Answer: </b>No. Yabasic does not translate 
-its input into assembly, you always need the yabasic executable. On the other 
-hand: the yabasic executable is rather small (&lt;200 kB), so you might spread 
-it around with your yabasic programs.</p>
+<p><b>Question: </b>Can yabasic generate standalone programs, which may run 
+without the yabasic executable ?<br> <b>Answer: </b>Yes and No. Yabasic does not translate 
+its input into assembly, you always need the yabasic executable (interpreter). However, the <a href="yabasic.htm" target="manual">bind-feature</a> of yabasic allows to glue both, your yabasic-program and the yabasic executable, together and distribute it as a single file. In any case: the yabasic executable is rather small (&lt;500 kB), so you may just pass it around with your yabasic programs.</p>
 <p><b>Question: </b>May I charge for my yabasic programs ?<br> <b>Answer:</b> 
-Yes, you may. But you should state clearly, that yabasic itself is available 
-free of charge. Refer to the <a href="copyright.html" target="_self">copyright</a> 
+Yes, you may. You may even distribute yabasic itself along with your software. Refer to the <a href="copyright.html" target="copyright">copyright</a> 
 for details.</p>
 <p><b>Question:</b> I have just typed in my yabasic program; How &nbsp;do I 
 <b>save</b> it ?<br> <b>Answer:</b> You cannot save it. Yabasic has no builtin 
 editor and cannot save the text you have typed in ! You have to use another 
 editor (e.g. Notepad under Windows) to create and save your yabasic programs. 
-Details on how to do this can be found in the <a href="yabasic.htm" target="_self">documentation</a> 
+Details on how to do this can be found in the <a href="yabasic.htm" target="manual">documentation</a>
 of yabasic.</p>
 <p><b>Question:</b> Does yabasic handle unicode ?<br> <b>Answer:</b> No. The internals of yabasic can handle only 8-Bit characters and are therefore limited to what can be done in one of thos encodings, e.g. iso8859-p1. Vhanging this woul require a quite significant effort.</p>
 <p><b>Question:</b> What does the name <b>yabasic</b> mean ?<br> <b>Answer:</b> <b>yabasic</b> stands for <b>yet-another-basic</b>, an acronym aiming at the large number of different basic-dialects available, when yabasic had been created.</p>
