@@ -11,6 +11,7 @@
     <h4>Version 2.90.5, November 11, 2024</h4>
     <ul>
       <li>Fixed a bug related with 'inkey$'.</li>
+      <li>For Windows: needed to switch to a newer version of visual studio; unfortunately, this probably breaks compatibility with xp</li>
     </ul>
     <h4>Version 2.90.4, September 17, 2023</h4>
     <ul>
