@@ -1,5 +1,7 @@
 Version 2.90.5 (November 11, 2024)
   - Fixed a bug related with 'inkey$'.
+  - For Windows: needed to switch to a newer version of visual studio;
+    unfortunately, this probably breaks compatibility with xp
 
 
 Version 2.90.4 (September 17, 2023)
